tdf#106611 make click on status bar insert/overwrite field work

Change-Id: Ife8f9126a0249a8abe4e9fbe00917a784288c8e7